data/derived/comb/progs/unify/prog1600.ml.out
Characters 0-6:
  digits -23422 = [2,3,4,2,2];;
  ^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
